# re-fotografing-android

./: CMakeCache.txt  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/delaroystudios/camera/: CameraActivity.java  CameraPreview.java  MainActivity.java  NavigationProcesing.java  OpenCVNative.java  RefotografieActivity.java  SelectPointsActivity.java  SettingActivity.java
app/src/main/jni/: Android.mk  Application.mk  Main.cpp  Main.h  OpenCVNative.cpp  OpenCVNative.h  RobustMatcher.cpp
app/src/main/jniLibs/include/opencv2/core/hal/: interface.h
app/src/main/jniLibs/include/opencv2/nonfree/: features2d.hpp
app/src/main/jniOut/java/com/delaroystudios/camera/: CameraActivity.java  CameraPreview.java  MainActivity.java  MyRealTimeImageProcessing.java  RefotografieActivity.java  SelectPointsActivity.java
app/src/main/res/layout/: activity_main.xml  camera_layout.xml  config_layout.xml  main.xml  menu_layout.xml  select_points.xml  seting_layout.xml
app/src/main/res/menu/: change_view.xml  menu_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
